--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "depreciation-calculator",
-  "version": "0.1.0",
+  "name": "spot-on",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
