gitignore: build markups excluded

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+# markup compiled files
 *.css
 *.css.map
-!/build
+!/build/static/css/*.css
+!/build/static/css/*.map.css
 
 # dependencies
 /node_modules
