--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "build": "react-scripts build",
-    "deploy": "react-scripts build && find build -type d -exec chmod 755 {} \\; && find build -type f -exec chmod 644 {} \\; && git add build/ && git commit -m \"[deployment auto commit]\" && git ftp push",
-    "eject": "react-scripts eject"
+    "start":  "react-scripts start",
+    "test":   "react-scripts test",
+    "build":  "react-scripts build",
+    "deploy": "react-scripts build && find build -type d -exec chmod 755 {} \\; && find build -type f -exec chmod 644 {} \\; && cd build && git init && git add -A && git commit -m \"init\" && git config git-ftp.url ftp://ftp.the-spot-on.com:21/public_html && git config git-ftp.user \"thespoto\" && git config git-ftp.password \"mmP3:03189292\" && git ftp push",
+    "eject":  "react-scripts eject"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
